--- a/Titanic_Kaggle_Competition.ipynb
+++ b/Titanic_Kaggle_Competition.ipynb
@@ -26,7 +26,7 @@
       },
       "source": [
         "# Problem Definition\n",
-        "A binary classification problem solved using machine learning by creating a model that can predict passenger survivability on the Titanic shipwreck."
+        "A binary classification problem solved using machine learning by creating a model that can predict if a passenger will survive the Titanic shipwreck."
       ]
     },
     {
@@ -10094,7 +10094,7 @@
       "name": "Titanic-Kaggle-Competition.ipynb",
       "toc_visible": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNvq9ydsbHCeg31wVvjdDWy",
+      "authorship_tag": "ABX9TyNX8rz89FjHD4wcBzCWkF4B",
       "include_colab_link": true
     },
     "kernelspec": {
