--- a/Titanic_Kaggle_Competition.ipynb
+++ b/Titanic_Kaggle_Competition.ipynb
@@ -20,6 +20,49 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "from IPython.display import display\n",
+        "from IPython.display import HTML\n",
+        "import IPython.core.display as di # Example: di.display_html('<h3>%s:</h3>' % str, raw=True)\n",
+        "\n",
+        "# This line will hide code by default when the notebook is exported as HTML\n",
+        "di.display_html('<script>jQuery(function() {if (jQuery(\"body.notebook_app\").length == 0) { jQuery(\".input_area\").toggle(); jQuery(\".prompt\").toggle();}});</script>', raw=True)\n",
+        "\n",
+        "# This line will add a button to toggle visibility of code blocks, for use with the HTML export version\n",
+        "di.display_html('''<button onclick=\"jQuery('.input_area').toggle(); jQuery('.prompt').toggle();\">Toggle code</button>''', raw=True)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 39
+        },
+        "id": "L6Xyl6CxnN9S",
+        "outputId": "b66cabaf-69df-467d-9453-76e242251bea"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<script>jQuery(function() {if (jQuery(\"body.notebook_app\").length == 0) { jQuery(\".input_area\").toggle(); jQuery(\".prompt\").toggle();}});</script>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<button onclick=\"jQuery('.input_area').toggle(); jQuery('.prompt').toggle();\">Toggle code</button>"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "jPe3yV3I63kb"
@@ -93,6 +136,17 @@
         "import warnings\n",
         "warnings.filterwarnings('ignore')"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "6T5Xr20YnMan"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -8523,7 +8577,7 @@
     {
       "cell_type": "code",
       "source": [
-        "def vizulaize_conf_matrix (models, y_test, pred_dict):\n",
+        "def visualize_conf_matrix (models, y_test, pred_dict):\n",
         "  conf_matrices = []\n",
         "  for model in models:\n",
         "    conf_matrix = confusion_matrix(y_test, pred_dict[model])\n",
@@ -8712,7 +8766,7 @@
       "cell_type": "code",
       "source": [
         "#cm for label encoded data\n",
-        "vizulaize_conf_matrix(model_names_eval, y_test_le, pred_dict_le)"
+        "visualize_conf_matrix(model_names_eval, y_test_le, pred_dict_le)"
       ],
       "metadata": {
         "colab": {
@@ -8810,7 +8864,7 @@
       "cell_type": "code",
       "source": [
         "#cm for one hot encoded data\n",
-        "vizulaize_conf_matrix(model_names_eval, y_test_le, pred_dict_ohe)"
+        "visualize_conf_matrix(model_names_eval, y_test_le, pred_dict_ohe)"
       ],
       "metadata": {
         "colab": {
@@ -9110,7 +9164,7 @@
       "cell_type": "markdown",
       "source": [
         "-  In general, the confusion matrices show that the models generate a higher rate of False Negatives. This means that models tend to predict a higher rate of false survival rate\n",
-        "- Accuracy performance metric that is defined as the ratio of true positives and true negatives to all positive and negative observations. **Accuracy Score =** **(TP + TN)/ (TP + FN + TN + FP)**. Based on the data seen so far, the accuracy of most of this models is above 80%, similar to the Cross Validation rate. One hot encoded and label encoded features have similar Accuracy rates.\n",
+        "- Accuracy performance metric is defined as the ratio of true positives and true negatives to all positive and negative observations. **Accuracy Score =** **(TP + TN)/ (TP + FN + TN + FP)**. Based on the data seen so far, the accuracy of most of this models is above 80%, similar to the Cross Validation rate. One hot encoded and label encoded features have similar Accuracy rates.\n",
         "- Recall score represents the model’s ability to correctly predict the positives out of actual positives. **Recall Score = TP / (FN + TP)**. The FN represents predictions that are wrongly classified as survived though the passengers are actually dead. A lower Recall represents that the model tends to optimistically predict survival rate. Recall is low for most models.\n",
         "- Precision score represents the model’s ability to correctly predict the positives out of all the total positive predictions. **Precision Score = TP / (FP + TP)** Positive predictions represent death. False positives in this case are passengers who actually survived that we predicted to be dead. In most cases, the precision of predicting death for these models is more accurate than the prediction survival.\n",
         "-  F1 score is a metric that gives equal weight to both the Precision and Recall."
@@ -10094,7 +10148,7 @@
       "name": "Titanic-Kaggle-Competition.ipynb",
       "toc_visible": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNX8rz89FjHD4wcBzCWkF4B",
+      "authorship_tag": "ABX9TyMMAdwcv6acEEKbF0QhOiqI",
       "include_colab_link": true
     },
     "kernelspec": {
