--- a/Titanic_Kaggle_Competition.ipynb
+++ b/Titanic_Kaggle_Competition.ipynb
@@ -16,50 +16,7 @@
         "id": "4VogWnCIyMj7"
       },
       "source": [
-        "#**Comprehensive Data Science Workflow on Titanic Dataset**\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from IPython.display import display\n",
-        "from IPython.display import HTML\n",
-        "import IPython.core.display as di # Example: di.display_html('<h3>%s:</h3>' % str, raw=True)\n",
-        "\n",
-        "# This line will hide code by default when the notebook is exported as HTML\n",
-        "di.display_html('<script>jQuery(function() {if (jQuery(\"body.notebook_app\").length == 0) { jQuery(\".input_area\").toggle(); jQuery(\".prompt\").toggle();}});</script>', raw=True)\n",
-        "\n",
-        "# This line will add a button to toggle visibility of code blocks, for use with the HTML export version\n",
-        "di.display_html('''<button onclick=\"jQuery('.input_area').toggle(); jQuery('.prompt').toggle();\">Toggle code</button>''', raw=True)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 39
-        },
-        "id": "L6Xyl6CxnN9S",
-        "outputId": "b66cabaf-69df-467d-9453-76e242251bea"
-      },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/html": [
-              "<script>jQuery(function() {if (jQuery(\"body.notebook_app\").length == 0) { jQuery(\".input_area\").toggle(); jQuery(\".prompt\").toggle();}});</script>"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/html": [
-              "<button onclick=\"jQuery('.input_area').toggle(); jQuery('.prompt').toggle();\">Toggle code</button>"
-            ]
-          },
-          "metadata": {}
-        }
+        "#**Data Science Workflow on Titanic Dataset**\n"
       ]
     },
     {
@@ -91,6 +48,7 @@
       "source": [
         "# Python\n",
         "import math, time, random, datetime\n",
+        "from IPython.display import HTML\n",
         "from functools import reduce\n",
         "\n",
         "# EDA\n",
@@ -138,17 +96,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "6T5Xr20YnMan"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "K1VMqkGvhc3-"
@@ -165,7 +112,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "whtyiHAMpeJM",
-        "outputId": "d8c8bb4f-0039-4a7d-a267-295b4cf3dbf1"
+        "outputId": "c2a64f47-e66b-4741-c6c9-8cad7608cf26"
       },
       "outputs": [
         {
@@ -179,30 +126,6 @@
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "I5-z5iw1peJk",
-        "outputId": "ccaef5ea-2429-426c-bf6d-bf5a89f4e63c"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "gender_submission.csv  titanic_kaggle_submission_2021_12_29.csv  train.csv\n",
-            "test.csv\t       titanic_kaggle_submission.csv\n"
-          ]
-        }
-      ],
-      "source": [
-        "!ls \"drive/My Drive/Colab Notebooks/data/kaggle/titanic\""
       ]
     },
     {
@@ -252,34 +175,8 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "HB4DyWaGgcsa",
-        "outputId": "93070578-e7c5-40c5-8229-4a4c9c1cc590"
-      },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(891, 12)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 123
-        }
-      ],
-      "source": [
-        "train.shape"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "id": "7HbX2gTBgfBP",
-        "outputId": "8d7b208f-cd4c-40dd-bd30-e4c83388cb50"
+        "outputId": "3b1ae251-3453-40e7-8491-55ad675b0701"
       },
       "outputs": [
         {
@@ -290,7 +187,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 124
+          "execution_count": 39
         }
       ],
       "source": [
@@ -301,246 +198,11 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 487
-        },
-        "id": "mIrjHq5nFf9s",
-        "outputId": "666dec68-55ef-4f5a-e115-caa3bef132e4"
+        "id": "mIrjHq5nFf9s"
       },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "\n",
-              "  <div id=\"df-53631c2d-7f99-4582-8654-88d35d79dc35\">\n",
-              "    <div class=\"colab-df-container\">\n",
-              "      <div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>0</th>\n",
-              "      <th>1</th>\n",
-              "      <th>2</th>\n",
-              "      <th>3</th>\n",
-              "      <th>4</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>PassengerId</th>\n",
-              "      <td>1</td>\n",
-              "      <td>2</td>\n",
-              "      <td>3</td>\n",
-              "      <td>4</td>\n",
-              "      <td>5</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Survived</th>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Pclass</th>\n",
-              "      <td>3</td>\n",
-              "      <td>1</td>\n",
-              "      <td>3</td>\n",
-              "      <td>1</td>\n",
-              "      <td>3</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Name</th>\n",
-              "      <td>Braund, Mr. Owen Harris</td>\n",
-              "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
-              "      <td>Heikkinen, Miss. Laina</td>\n",
-              "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
-              "      <td>Allen, Mr. William Henry</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Sex</th>\n",
-              "      <td>male</td>\n",
-              "      <td>female</td>\n",
-              "      <td>female</td>\n",
-              "      <td>female</td>\n",
-              "      <td>male</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Age</th>\n",
-              "      <td>22</td>\n",
-              "      <td>38</td>\n",
-              "      <td>26</td>\n",
-              "      <td>35</td>\n",
-              "      <td>35</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>SibSp</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Parch</th>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Ticket</th>\n",
-              "      <td>A/5 21171</td>\n",
-              "      <td>PC 17599</td>\n",
-              "      <td>STON/O2. 3101282</td>\n",
-              "      <td>113803</td>\n",
-              "      <td>373450</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Fare</th>\n",
-              "      <td>7.25</td>\n",
-              "      <td>71.2833</td>\n",
-              "      <td>7.925</td>\n",
-              "      <td>53.1</td>\n",
-              "      <td>8.05</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Cabin</th>\n",
-              "      <td>NaN</td>\n",
-              "      <td>C85</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>C123</td>\n",
-              "      <td>NaN</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Embarked</th>\n",
-              "      <td>S</td>\n",
-              "      <td>C</td>\n",
-              "      <td>S</td>\n",
-              "      <td>S</td>\n",
-              "      <td>S</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-53631c2d-7f99-4582-8654-88d35d79dc35')\"\n",
-              "              title=\"Convert this dataframe to an interactive table.\"\n",
-              "              style=\"display:none;\">\n",
-              "        \n",
-              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-              "       width=\"24px\">\n",
-              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
-              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
-              "  </svg>\n",
-              "      </button>\n",
-              "      \n",
-              "  <style>\n",
-              "    .colab-df-container {\n",
-              "      display:flex;\n",
-              "      flex-wrap:wrap;\n",
-              "      gap: 12px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert {\n",
-              "      background-color: #E8F0FE;\n",
-              "      border: none;\n",
-              "      border-radius: 50%;\n",
-              "      cursor: pointer;\n",
-              "      display: none;\n",
-              "      fill: #1967D2;\n",
-              "      height: 32px;\n",
-              "      padding: 0 0 0 0;\n",
-              "      width: 32px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert:hover {\n",
-              "      background-color: #E2EBFA;\n",
-              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "      fill: #174EA6;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert {\n",
-              "      background-color: #3B4455;\n",
-              "      fill: #D2E3FC;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert:hover {\n",
-              "      background-color: #434B5C;\n",
-              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-              "      fill: #FFFFFF;\n",
-              "    }\n",
-              "  </style>\n",
-              "\n",
-              "      <script>\n",
-              "        const buttonEl =\n",
-              "          document.querySelector('#df-53631c2d-7f99-4582-8654-88d35d79dc35 button.colab-df-convert');\n",
-              "        buttonEl.style.display =\n",
-              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "\n",
-              "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-53631c2d-7f99-4582-8654-88d35d79dc35');\n",
-              "          const dataTable =\n",
-              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-              "                                                     [key], {});\n",
-              "          if (!dataTable) return;\n",
-              "\n",
-              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
-              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-              "            + ' to learn more about interactive tables.';\n",
-              "          element.innerHTML = '';\n",
-              "          dataTable['output_type'] = 'display_data';\n",
-              "          await google.colab.output.renderOutput(dataTable, element);\n",
-              "          const docLink = document.createElement('div');\n",
-              "          docLink.innerHTML = docLinkHtml;\n",
-              "          element.appendChild(docLink);\n",
-              "        }\n",
-              "      </script>\n",
-              "    </div>\n",
-              "  </div>\n",
-              "  "
-            ],
-            "text/plain": [
-              "                                   0  ...                         4\n",
-              "PassengerId                        1  ...                         5\n",
-              "Survived                           0  ...                         0\n",
-              "Pclass                             3  ...                         3\n",
-              "Name         Braund, Mr. Owen Harris  ...  Allen, Mr. William Henry\n",
-              "Sex                             male  ...                      male\n",
-              "Age                               22  ...                        35\n",
-              "SibSp                              1  ...                         0\n",
-              "Parch                              0  ...                         0\n",
-              "Ticket                     A/5 21171  ...                    373450\n",
-              "Fare                            7.25  ...                      8.05\n",
-              "Cabin                            NaN  ...                       NaN\n",
-              "Embarked                           S  ...                         S\n",
-              "\n",
-              "[12 rows x 5 columns]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 125
-        }
-      ],
+      "outputs": [],
       "source": [
+        "%%capture\n",
         "train.head().T"
       ]
     },
@@ -552,7 +214,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "strdvYePjWzZ",
-        "outputId": "a780a1f2-7123-477d-d74e-eb42a1eee6f9"
+        "outputId": "ca22b2f0-5ec6-447e-e139-167570322c5d"
       },
       "outputs": [
         {
@@ -602,7 +264,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9UH3HUUuKYBt",
-        "outputId": "f3e44cc8-1f00-4be5-d7bf-7b232d147db0"
+        "outputId": "c2a312b3-bed3-43fc-e6ab-512a31fab159"
       },
       "outputs": [
         {
@@ -625,7 +287,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 127
+          "execution_count": 17
         }
       ],
       "source": [
@@ -641,7 +303,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QNcXJJhLMH05",
-        "outputId": "32c3566d-34e3-4520-d380-7354c84d571c"
+        "outputId": "d114d3e1-ff54-4f8c-b80e-646d059c6094"
       },
       "outputs": [
         {
@@ -663,7 +325,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 128
+          "execution_count": 18
         }
       ],
       "source": [
@@ -688,7 +350,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iUgAu2DGnMzO",
-        "outputId": "af55fb96-7401-4876-b639-c28f7028480b"
+        "outputId": "6a4f925c-eeeb-46d2-c72a-fd65a45153c3"
       },
       "outputs": [
         {
@@ -756,7 +418,7 @@
           "height": 170
         },
         "id": "qn2EP3WL4EV1",
-        "outputId": "82851379-fe53-4d9a-aae0-3631cf2528f2"
+        "outputId": "88190492-4984-4216-9175-1be044a576b7"
       },
       "outputs": [
         {
@@ -7839,7 +7501,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 336,
+      "execution_count": null,
       "metadata": {
         "id": "KMMLAqBhe6E9"
       },
@@ -8598,7 +8260,7 @@
       "metadata": {
         "id": "eVJUx-ai9sWX"
       },
-      "execution_count": 346,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8776,7 +8438,7 @@
         "id": "xjobrmZY-kKJ",
         "outputId": "52a11146-d5f0-4e1b-eaaa-26cc24a8cae7"
       },
-      "execution_count": 347,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -10148,7 +9810,7 @@
       "name": "Titanic-Kaggle-Competition.ipynb",
       "toc_visible": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMMAdwcv6acEEKbF0QhOiqI",
+      "authorship_tag": "ABX9TyP/waiBMH6Zi+7h8tt52n+F",
       "include_colab_link": true
     },
     "kernelspec": {
